@@ -47,7 +47,7 @@ import java.util.stream.Stream;
  * <p>
  *     How to run from the terminal?
  *     <code>
- *      java --enable-preview -cp target/crsamples-1.0-SNAPSHOT.jar oracle.code.samples.InlineExample
+ *      java --add-modules jdk.incubator.code -cp target/crsamples-1.0-SNAPSHOT.jar oracle.code.samples.InlineExample
  *     </code>
  * </p>
  */
